--- a/app/assets/stylesheets/rails_admin/custom/theming.scss
+++ b/app/assets/stylesheets/rails_admin/custom/theming.scss
@@ -61,6 +61,10 @@ a {
   color:$white;
 }
 
+.breadcrumb , .well {
+  background-color:$grayLight;
+}
+
 .sidebar-nav {
   
   background-color:#ffffff!important;
