--- a/app/assets/stylesheets/rails_admin/custom/variables.scss
+++ b/app/assets/stylesheets/rails_admin/custom/variables.scss
@@ -10,10 +10,9 @@ $black:                 #000;
 $grayDarker:            #222;
 $grayDark:              #7b8a8b;
 $gray:                  #95A5A6;
-$grayLight:             #b4bcc2;
+$grayLight:             #e5e4e2;
 $grayLighter:           #ECF0F1;
 $white:                 #fff;
-$grayLight:				#f8f8f8;
 
 // Accent colors
 // -------------------------
